kubernetes/apps/bootstrap/ca/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ca-mgmt-https
  namespace: smallstep
spec:
  parentRefs:
    - name: ca-mgmt
      namespace: smallstep
      sectionName: https
      port: 443
  hostnames:
    - "ca.${mgmtDomainOld}"
  rules:
    - name: https
      backendRefs:
        - name: https
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ca-mgmt-http
  namespace: smallstep
spec:
  parentRefs:
    - name: ca-mgmt
      namespace: smallstep
      sectionName: http
      port: 80
  hostnames:
    - "ca.${mgmtDomainOld}"
  rules:
    - name: http
      backendRefs:
        - name: http
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ca-service-https
  namespace: smallstep
spec:
  parentRefs:
    - name: ca-service
      namespace: smallstep
      sectionName: https
      port: 443
  hostnames:
    - "ca.${serviceDomainOld}"
  rules:
    - name: https
      backendRefs:
        - name: https
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ca-service-http
  namespace: smallstep
spec:
  parentRefs:
    - name: ca-service
      namespace: smallstep
      sectionName: http
      port: 80
  hostnames:
    - "ca.${serviceDomainOld}"
  rules:
    - name: http
      backendRefs:
        - name: http
          port: 443
